--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   auto_size_text: ^3.0.0
   carousel_slider: ^4.1.1
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
   device_preview: ^1.1.0
   dio: ^4.0.6
   flutter:
